crates/ars-components/src/specialized/signature_pad/snapshots/ars_components__specialized__signature_pad__tests__snapshot_root_readonly.snap
---
source: crates/ars-components/src/specialized/signature_pad/mod.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-readonly",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "signature-pad",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "completed",
            ),
        ),
        (
            Id,
            String(
                "sig",
            ),
        ),
    ],
    styles: [],
}
