crates/ars-components/src/specialized/signature_pad/snapshots/ars_components__specialized__signature_pad__tests__snapshot_undo_trigger_filled.snap
---
source: crates/ars-components/src/specialized/signature_pad/mod.rs
expression: "snapshot_attrs(&filled_api(State::Completed).undo_trigger_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "undo-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "signature-pad",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Undo last stroke",
            ),
        ),
        (
            Id,
            String(
                "sig-undo",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
